# CAL-2020-2021-PROJ

./: .gitignore  CMakeLists.txt  main.cpp
airports_dataset/: README.md  airports_full_edges_weights.txt
airports_datasets/airports_full/: README.md  edges.txt  node_coords.txt  node_names.txt
airports_datasets/airports_iberia/: edge_weights.txt  edges.txt  node_coords.txt  node_names.txt
airports_datasets/dijkstra_test/: edge_weights.txt  edges.txt  node_coords.txt  node_names.txt
example/: example.cpp  main.cpp
example/test/: ex1.cpp  main.cpp
lib/GraphViewerCpp/: CMakeLists.txt
lib/GraphViewerCpp/SFML/: CMakeLists.txt
lib/GraphViewerCpp/SFML/examples/: CMakeLists.txt
lib/GraphViewerCpp/SFML/examples/X11/: CMakeLists.txt
lib/GraphViewerCpp/SFML/examples/cocoa/: CMakeLists.txt
lib/GraphViewerCpp/SFML/examples/ftp/: CMakeLists.txt
lib/GraphViewerCpp/SFML/examples/iOS/: CMakeLists.txt
lib/GraphViewerCpp/SFML/examples/island/: CMakeLists.txt
lib/GraphViewerCpp/SFML/examples/joystick/: CMakeLists.txt
lib/GraphViewerCpp/SFML/examples/opengl/: CMakeLists.txt
lib/GraphViewerCpp/SFML/examples/pong/: CMakeLists.txt
lib/GraphViewerCpp/SFML/examples/shader/: CMakeLists.txt
lib/GraphViewerCpp/example/: example  main.cpp
lib/GraphViewerCpp/include/: graphviewer.h
lib/GraphViewerCpp/lib/: graphviewer.lib
lib/GraphViewerCpp/src/: edge.cpp  graphviewer.cpp  lines.cpp  node.cpp
src/: airport.cpp  airport.h  connection.cpp  connection.h  crew.cpp  crew.h  ex1.cpp  graph.cpp  graph.h  loader.cpp  main.cpp  passenger.cpp  passenger.h  plane.cpp  plane.h
(+10 files in other folders)
